--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "immutable": "*",
     "jquery": "^2.2.3",
     "lodash": "*",
+    "moment": "^2.13.0",
     "node-sass": "^3.7.0",
     "react": "*",
     "react-bootstrap": "^0.29.4",
     "react-burger-menu": "^1.8.3",
+    "react-datepicker": "^0.27.0",
     "react-highcharts": "^8.3.2",
     "react-onclickoutside": "^5.2.0",
     "react-redux": "*",
